Bug 393850 - Exporting EXR images in RGB and grayscale throws errors
Summary: Exporting EXR images in RGB and grayscale throws errors
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 4.0.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-04 16:15 UTC by amyspark
Modified: 2018-05-12 08:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2018-05-04 16:15:03 UTC
In Krita 4.0.1, exporting a RGB or Grayscale image to EXR throws up an error: "Could not create the output document".
If the image is RGB, it will still save it; if grayscale, the output file is corrupted.

I could reproduce this with both Windows 7 x64 and MacOS Sierra 10.12.6.
Comment 1 mvowada 2018-05-04 18:27:10 UTC
Yes, I can confirm with any color depths:

    - it saves RGB to EXR, but it trows an error,
    - it saves Grayscale to EXR, but it trows an error && the file is corrupted.

(checked with Krita 4.1.0-pre-alpha (git dac4dc7) on Ubuntu 14.04)
Comment 2 Halla Rempt 2018-05-10 12:11:35 UTC
I take it you are trying to save 8 or 16 bit integer images?
Comment 3 Halla Rempt 2018-05-10 12:49:32 UTC
Git commit 48cc061544da7404ac8a4730bb1f99c7d0edcf83 by Boudewijn Rempt.
Committed on 10/05/2018 at 12:11.
Pushed by rempt into branch 'master'.

Fix warnings when saving integer images to EXR

M  +1    -1    plugins/impex/exr/exr_export.cc

https://commits.kde.org/krita/48cc061544da7404ac8a4730bb1f99c7d0edcf83
Comment 4 Halla Rempt 2018-05-10 13:06:42 UTC
Git commit e9c81a26947d03698d58440a785eaa8e51bf1ed4 by Boudewijn Rempt.
Committed on 10/05/2018 at 13:04.
Pushed by rempt into branch 'master'.

Fix empty warnings when using filters that cannot use QIoDevices

If a filter uses a library that handles the file creation, we
cannot use QSaveFile, so we shouldn't try to use it.

M  +8    -6    libs/ui/KisImportExportManager.cpp

https://commits.kde.org/krita/e9c81a26947d03698d58440a785eaa8e51bf1ed4
Comment 5 mvowada 2018-05-11 07:56:14 UTC
(In reply to Boudewijn Rempt from comment #2)
> I take it you are trying to save 8 or 16 bit integer images?

Hi Boudewijn, 
you're right: actually exporting 8-bit depth files didn't throw up the error, only 16/32-bit (both integer and floating).
Thanks
Comment 6 Halla Rempt 2018-05-12 08:33:51 UTC
Git commit c1eca00db78879a9a1b362efa1e9deff789d105f by Boudewijn Rempt.
Committed on 12/05/2018 at 08:26.
Pushed by rempt into tag 'v3.0.4'.

Fix warnings when saving integer images to EXR
(cherry picked from commit 48cc061544da7404ac8a4730bb1f99c7d0edcf83)

M  +1    -1    plugins/impex/exr/exr_export.cc

https://commits.kde.org/krita/c1eca00db78879a9a1b362efa1e9deff789d105f
Comment 7 Halla Rempt 2018-05-12 08:33:51 UTC
Git commit d6343e875b431988431c0cdd430bcd29ba4a8ece by Boudewijn Rempt.
Committed on 12/05/2018 at 08:27.
Pushed by rempt into tag 'v3.0.4'.

Fix empty warnings when using filters that cannot use QIoDevices

If a filter uses a library that handles the file creation, we
cannot use QSaveFile, so we shouldn't try to use it.
(cherry picked from commit e9c81a26947d03698d58440a785eaa8e51bf1ed4)

M  +8    -6    libs/ui/KisImportExportManager.cpp

https://commits.kde.org/krita/d6343e875b431988431c0cdd430bcd29ba4a8ece