Fix empty warnings when using filters that cannot use QIoDevices

If a filter uses a library that handles the file creation, we
cannot use QSaveFile, so we shouldn't try to use it.

BUG:393850
(cherry picked from commit e9c81a26947d03698d58440a785eaa8e51bf1ed4)